# auto_article

./: .gitignore  README.md  pyproject.toml
.aap/: config.example.yaml
docs/: 技术设计.md  需求文档.md
scripts/: extract_pdf.py
src/aap/: __init__.py  __main__.py
src/aap/cli/: __init__.py  config_cli.py  export.py  history.py  image.py  main.py  preview.py  publish.py  scf.py  template.py  test_cmd.py
src/aap/config/: __init__.py  manager.py
src/aap/core/: __init__.py  html_utils.py  models.py  parser.py  renderer.py  template_engine.py
src/aap/image/: __init__.py  binder.py  packer.py  scanner.py
src/aap/preview/: __init__.py  server.py
src/aap/publish/: __init__.py  exporter.py  publisher.py
src/aap/scf/: __init__.py  deployer.py  proxy.py
src/aap/templates/: __init__.py  manager.py
src/aap/utils/: __init__.py  clipboard.py  path.py
src/aap/wechat/: __init__.py  auth.py  client.py  draft.py  material.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_history.py  test_main.py
tests/config/: test_manager.py
tests/core/: __init__.py  test_html_utils.py  test_parser.py  test_renderer.py  test_template_engine.py
tests/fixtures/caibao/: caibao_sample.md  changxin_tech_sample.md  zhongwu_gaoxin_sample.md  中巨芯样本.md  澜起科技样本.md  物理卡口投资价值深度评估.md
tests/fixtures/minimal/: sample.md
tests/fixtures/research/: 物理卡口投资价值深度评估.md  电子级氢氟酸Serenity框架分析.md  电子级氢氟酸行业赛道报告.md  (+2 more)
tests/image/: test_binder.py
tests/scf/: test_deployer.py  test_main_handler.py
tests/templates/: test_editor.py  test_manager.py
tests/wechat/: test_draft.py
(+9 files in other folders)
