[project]
name = "aap"
version = "0.1.0"
description = "Automated Article Publisher - 微信公众号文章自动化发布工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AAP" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "markdown-it-py>=3.0.0",
    "python-frontmatter>=1.1.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tinycss2>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
scf = ["tencentcloud-sdk-python>=3.0.1000"]
screenshot = ["playwright>=1.42.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
aap = "aap.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aap"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
